unpackaged/main/default/objects/Medallia_Staging__c/fields/Overall_Satisfaction_with_Restaurant_10__c.field-meta.xml
<CustomField>
    <fullName>Overall_Satisfaction_with_Restaurant_10__c</fullName>
    <label>Overall Satisfaction with Restaurant  10</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>