unpackaged/main/default/objects/Medallia_Staging__c/fields/Plan_to_visit_again__c.field-meta.xml
<CustomField>
    <fullName>Plan_to_visit_again__c</fullName>
    <label>Plan to visit again</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Within the next week</fullName>
            </value>
            <value>
                <fullName>next 30 days</fullName>
            </value>
            <value>
                <fullName>next 6 months</fullName>
            </value>
            <value>
                <fullName>1 year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>