unpackaged/main/default/objects/Medallia_Staging__c/fields/Poker__c.field-meta.xml
<CustomField>
    <fullName>Poker__c</fullName>
    <label>Poker</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>