unpackaged/main/default/objects/Medallia_Staging__c/fields/Poker_Friendliness_and_Professionalism__c.field-meta.xml
<CustomField>
    <fullName>Poker_Friendliness_and_Professionalism__c</fullName>
    <label>Friendliness and Professionalism</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>