unpackaged/main/default/objects/Medallia_Staging__c/fields/Primary_date__c.field-meta.xml
<CustomField>
    <fullName>Primary_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary date</label>
    <type>Date</type>
</CustomField>