unpackaged/main/default/objects/Medallia_Staging__c/fields/Prior_NPS_SGA__c.field-meta.xml
<CustomField>
    <fullName>Prior_NPS_SGA__c</fullName>
    <label>Prior NPS SGA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Promoter</fullName>
            </value>
            <value>
                <fullName>Passive</fullName>
            </value>
            <value>
                <fullName>Detractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>