unpackaged/main/default/objects/Medallia_Staging__c/fields/Problem_Area__c.field-meta.xml
<CustomField>
    <fullName>Problem_Area__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Problem Area</label>
    <length>80000</length>
    <type>LongTextArea</type>
</CustomField>