unpackaged/main/default/objects/Medallia_Staging__c/fields/Property_Tier__c.field-meta.xml
<CustomField>
    <fullName>Property_Tier__c</fullName>
    <label>Property Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Premier2</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Elite</fullName>
            </value>
            <value>
                <fullName>XCARD</fullName>
            </value>
            <value>
                <fullName>Rock Royalty</fullName>
            </value>
            <value>
                <fullName>X</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>