unpackaged/main/default/objects/Medallia_Staging__c/fields/Quality__c.field-meta.xml
<CustomField>
    <fullName>Quality__c</fullName>
    <label>Quality</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>