unpackaged/main/default/objects/Medallia_Staging__c/fields/Quality_of_bathroom__c.field-meta.xml
<CustomField>
    <fullName>Quality_of_bathroom__c</fullName>
    <label>Quality of bathroom</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>