unpackaged/main/default/objects/Medallia_Staging__c/fields/Quality_of_Food_Restaurant_10__c.field-meta.xml
<CustomField>
    <fullName>Quality_of_Food_Restaurant_10__c</fullName>
    <label>Quality of Food Restaurant 10</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>