unpackaged/main/default/objects/Medallia_Staging__c/fields/Quality_of_Food_Restaurant_11__c.field-meta.xml
<CustomField>
    <fullName>Quality_of_Food_Restaurant_11__c</fullName>
    <label>Quality of Food Restaurant 11</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>