unpackaged/main/default/objects/Medallia_Staging__c/fields/Quality_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Quality_of_Service__c</fullName>
    <label>Quality of Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>