unpackaged/main/default/objects/Medallia_Staging__c/fields/Record_Type_One_Survey__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_One_Survey__c</fullName>
    <label>Record Type - One Survey</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>