unpackaged/main/default/objects/Medallia_Staging__c/fields/Resolution_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Satisfaction__c</fullName>
    <label>Resolution Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Didn’t have a problem</fullName>
            </value>
            <value>
                <fullName>Had a problem and it was resolved to my satisfaction</fullName>
            </value>
            <value>
                <fullName>Had a problem and it wasn’t resolved to my satisfaction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>