unpackaged/main/default/objects/Medallia_Staging__c/fields/Responsedate__c.field-meta.xml
<CustomField>
    <fullName>Responsedate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Response Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>