unpackaged/main/default/objects/Medallia_Staging__c/fields/ResSource__c.field-meta.xml
<CustomField>
    <fullName>ResSource__c</fullName>
    <label>ResSource</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct:Web</fullName>
            </value>
            <value>
                <fullName>Direct:Customer Care</fullName>
            </value>
            <value>
                <fullName>Direct:Customer Care BPO</fullName>
            </value>
            <value>
                <fullName>Direct:Other</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Other/Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>