unpackaged/main/default/objects/Medallia_Staging__c/fields/Restaurant_Bar_11__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_Bar_11__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Restaurant Bar 11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>