unpackaged/main/default/objects/Medallia_Staging__c/fields/Rock_Star_Rewards_Center__c.field-meta.xml
<CustomField>
    <fullName>Rock_Star_Rewards_Center__c</fullName>
    <label>Rock Star Rewards Center</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>