unpackaged/main/default/objects/Medallia_Staging__c/fields/Room_and_bathroom_cleanliness__c.field-meta.xml
<CustomField>
    <fullName>Room_and_bathroom_cleanliness__c</fullName>
    <label>Room and bathroom cleanliness</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>