unpackaged/main/default/objects/Medallia_Staging__c/fields/Room_Cleanliness__c.field-meta.xml
<CustomField>
    <fullName>Room_Cleanliness__c</fullName>
    <label>Room Cleanliness</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>