unpackaged/main/default/objects/Medallia_Staging__c/fields/Room_Comfort__c.field-meta.xml
<CustomField>
    <fullName>Room_Comfort__c</fullName>
    <label>Room Comfort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>