unpackaged/main/default/objects/Medallia_Staging__c/fields/RoomNum__c.field-meta.xml
<CustomField>
    <fullName>RoomNum__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RoomNum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>