unpackaged/main/default/objects/Medallia_Staging__c/fields/RoomType__c.field-meta.xml
<CustomField>
    <fullName>RoomType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RoomType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>