unpackaged/main/default/objects/Medallia_Staging__c/fields/Safe_Secure__c.field-meta.xml
<CustomField>
    <fullName>Safe_Secure__c</fullName>
    <label>Safe &amp; Secure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>