unpackaged/main/default/objects/Medallia_Staging__c/fields/SAFE_SOUND_safety_and_sanitation_proto__c.field-meta.xml
<CustomField>
    <fullName>SAFE_SOUND_safety_and_sanitation_proto__c</fullName>
    <label>SAFE+SOUND safety &amp; sanitation protocols</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>