unpackaged/main/default/objects/Medallia_Staging__c/fields/Satisfaction_with_Casino_Host__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_with_Casino_Host__c</fullName>
    <label>Satisfaction with Casino Host</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>