unpackaged/main/default/objects/Medallia_Staging__c/fields/Satisfaction_with_Value_Restaurant_11__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_with_Value_Restaurant_11__c</fullName>
    <label>Satisfaction with Value Restaurant 11</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>