unpackaged/main/default/objects/Medallia_Staging__c/fields/Security_Suggestions_to_help_improve__c.field-meta.xml
<CustomField>
    <fullName>Security_Suggestions_to_help_improve__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Security: Suggestions to help improve ex</label>
    <length>80000</length>
    <type>LongTextArea</type>
</CustomField>