unpackaged/main/default/objects/Medallia_Staging__c/fields/Self_Parking_Safety__c.field-meta.xml
<CustomField>
    <fullName>Self_Parking_Safety__c</fullName>
    <label>Self Parking Safety</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>