unpackaged/main/default/objects/Medallia_Staging__c/fields/Self_Parking_Well_Lighted__c.field-meta.xml
<CustomField>
    <fullName>Self_Parking_Well_Lighted__c</fullName>
    <label>Self Parking Well Lighted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>