unpackaged/main/default/objects/Medallia_Staging__c/fields/Seminole_Common_Area_Experience__c.field-meta.xml
<CustomField>
    <fullName>Seminole_Common_Area_Experience__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Seminole: Common Area Experience</label>
    <length>80000</length>
    <type>LongTextArea</type>
</CustomField>