unpackaged/main/default/objects/Medallia_Staging__c/fields/Seminole_Hotel_Front_Desk_Experience__c.field-meta.xml
<CustomField>
    <fullName>Seminole_Hotel_Front_Desk_Experience__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Seminole: Hotel Front Desk Experience</label>
    <length>80000</length>
    <type>LongTextArea</type>
</CustomField>