unpackaged/main/default/objects/Medallia_Staging__c/fields/Seminole_Primary_reason_for_your_score__c.field-meta.xml
<CustomField>
    <fullName>Seminole_Primary_reason_for_your_score__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Seminole: Primary reason for your score</label>
    <length>80000</length>
    <type>LongTextArea</type>
</CustomField>