unpackaged/main/default/objects/Medallia_Staging__c/fields/Seminole_Recognition_of_team_members__c.field-meta.xml
<CustomField>
    <fullName>Seminole_Recognition_of_team_members__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Seminole: Recognition of team members</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>