unpackaged/main/default/objects/Medallia_Staging__c/fields/Seminole_Reservation_booking_experience__c.field-meta.xml
<CustomField>
    <fullName>Seminole_Reservation_booking_experience__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Seminole: Reservation booking experience</label>
    <length>80000</length>
    <type>LongTextArea</type>
</CustomField>