unpackaged/main/default/objects/Medallia_Staging__c/fields/Seminole_Room_Experience_Suggestion__c.field-meta.xml
<CustomField>
    <fullName>Seminole_Room_Experience_Suggestion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Seminole: Room Experience Suggestion</label>
    <length>80000</length>
    <type>LongTextArea</type>
</CustomField>