unpackaged/main/default/objects/Medallia_Staging__c/fields/Seminole_Suggestion_in_hotel_reservatio__c.field-meta.xml
<CustomField>
    <fullName>Seminole_Suggestion_in_hotel_reservatio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Seminole: Suggestion in hotel reservatio</label>
    <length>80000</length>
    <type>LongTextArea</type>
</CustomField>