unpackaged/main/default/objects/Medallia_Staging__c/fields/Service_Facility_10__c.field-meta.xml
<CustomField>
    <fullName>Service_Facility_10__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Facility 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>