unpackaged/main/default/objects/Medallia_Staging__c/fields/SevenRooms_Dining_Venue2__c.field-meta.xml
<CustomField>
    <fullName>SevenRooms_Dining_Venue2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SevenRooms_Dining Venue2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>