unpackaged/main/default/objects/Medallia_Staging__c/fields/Slots_Energy_and_Excitement_of_Area__c.field-meta.xml
<CustomField>
    <fullName>Slots_Energy_and_Excitement_of_Area__c</fullName>
    <label>Energy and Excitement of Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>