unpackaged/main/default/objects/Medallia_Staging__c/fields/Slots_Speed_of_Service_or_Pace_of_Game__c.field-meta.xml
<CustomField>
    <fullName>Slots_Speed_of_Service_or_Pace_of_Game__c</fullName>
    <label>Speed of Service or Pace of Game</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>