unpackaged/main/default/objects/Medallia_Staging__c/fields/Someone_else_makes_my_reservations_for_m__c.field-meta.xml
<CustomField>
    <fullName>Someone_else_makes_my_reservations_for_m__c</fullName>
    <label>Someone else made my Reservation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>