unpackaged/main/default/objects/Medallia_Staging__c/fields/Speak_to_same_agent__c.field-meta.xml
<CustomField>
    <fullName>Speak_to_same_agent__c</fullName>
    <label>Speak to same agent?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>No Preference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>