unpackaged/main/default/objects/Medallia_Staging__c/fields/Speed__c.field-meta.xml
<CustomField>
    <fullName>Speed__c</fullName>
    <label>In - Room Speed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>