unpackaged/main/default/objects/Medallia_Staging__c/fields/Speed_of_Service_3__c.field-meta.xml
<CustomField>
    <fullName>Speed_of_Service_3__c</fullName>
    <label>Speed of Service 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>